--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <button onclick="verificaPassword()">Accedi</button>
     
     <!-- Aggiungi l'immagine qui -->
-    <img src="https://github.com/domydomenico02011/domydomenico02011.github.io/blob/3edde407f2735abd3348e7fcc106bea664590383/Gold%20and%20Black%20Crown%20Icon%20Hotel%20Logo%20Design%20(3).png" alt="Descrizione dell'immagine">
+    <img src="Gold and Black Crown Icon Hotel Logo Design (3).png" alt="Descrizione dell'immagine">
 
     <script>
         function verificaPassword() {
