--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
             text-align: center;
             padding-top: 100px;
         }
+        .container {
+            position: relative;
+            display: inline-block;
+        }
         input[type="password"] {
             padding: 10px;
             font-size: 16px;
@@ -15,15 +19,31 @@
             padding: 10px 20px;
             font-size: 16px;
         }
+        .password-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(255, 255, 255, 0.7);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            z-index: 1;
+        }
     </style>
 </head>
 <body>
     <h1>Inserisci la password:</h1>
-    <input type="password" id="passwordInput">
-    <button onclick="verificaPassword()">Accedi</button>
-    
-    <!-- Aggiungi l'immagine qui -->
-    <img src="Gold and Black Crown Icon Hotel Logo Design (3).png" alt="Descrizione dell'immagine">
+    <div class="container">
+        <!-- Aggiungi l'immagine qui -->
+        <img src="Gold and Black Crown Icon Hotel Logo Design (3).png" alt="Descrizione dell'immagine">
+        <div class="password-overlay">
+            <input type="password" id="passwordInput">
+            <button onclick="verificaPassword()">Accedi</button>
+        </div>
+    </div>
 
     <script>
         function verificaPassword() {
