--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         }
         .password-overlay {
             position: absolute;
-            top: 0;
+            top: 50%;
             left: 0;
             width: 100%;
+            transform: translateY(-50%);
             height: 100%;
             background-color: rgba(255, 255, 255, 0.7);
             display: flex;
