--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         button {
             padding: 10px 20px;
             font-size: 16px;
+            margin-top: 10px;
         }
         .password-overlay {
             position: absolute;
