--- a/index.html
+++ b/index.html
@@ -58,12 +58,17 @@
                 alert("Password non corretta. Riprova.");
             }
         }
-
+        function verificaPasswordOnEnter(event) {
+            if (event.key === "Enter") {
+                verificaPassword();
+            }
+        }        
         function getPasswordCorrente() {
             // Qui puoi implementare la logica per ottenere la password corrente dal tuo sistema
             // Ad esempio, puoi utilizzare una chiamata a un'API o leggere da un file
             // Restituisci la password corrente come risultato di questa funzione
         }
+        document.getElementById("passwordInput").addEventListener("keydown", verificaPasswordOnEnter);
     </script>
 </body>
 </html>
