--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             flex-direction: column;
             z-index: 1;
         }
+        body, .container, input[type="password"], button, .password-overlay {
+    transform: scale(2);
+}
     </style>
 </head>
 <body>
