--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             flex-direction: column;
             z-index: 1;
         }
-        body, .container, input[type="password"], button, .password-overlay {
-    transform: scale(1.5);
+.container img {
+    transform: scale(2);
 }
     </style>
 </head>
