--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             flex-direction: column;
             z-index: 1;
         }
-.container img {
-    transform: scale(1.6);
+input[type="password"], .container img, button, .password-overlay {
+    transform: scale(1.7);
 }
     </style>
 </head>
