--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         }
         .password-overlay {
             position: absolute;
-            top: 0%;
+            top: 38%;
             left: 0;
             width: 100%;
-            transform: translateY(20%);
+            transform: translateY(0%);
             height: 100%;
             background-color: rgba(255, 255, 255, 0);
             display: flex;
@@ -34,7 +34,7 @@
             flex-direction: column;
             z-index: 1;
         }
-input[type="password"], .container img, button, .password-overlay {
+.container img, .password-overlay {
     transform: scale(1.7);
 }
     </style>
