--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         }
         button {
             padding: 10px 20px;
-            font-size: 16px;
-            margin-top: 10px;
+            font-size: 19px;
+            margin-top: 15px;
         }
         .password-overlay {
             position: absolute;
-            top: 38%;
+            top: 38.5%;
             left: 0;
             width: 100%;
             transform: translateY(0%);
@@ -36,6 +36,9 @@
         }
 .container img, .password-overlay {
     transform: scale(1.7);
+}
+input[type="password"] {
+    transform: scale(1.12);
 }
     </style>
 </head>
