--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
             flex-direction: column;
             z-index: 1;
         }
-.container img, .password-overlay {
+.container img {
+    transform: scale(1.75);
+}
+.password-overlay {
     transform: scale(1.7);
 }
 input[type="password"] {
