--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ input[type="password"] {
         <!-- Aggiungi l'immagine qui -->
         <img src="Gold and Black Crown Icon Hotel Logo Design (3).png" alt="Descrizione dell'immagine">
         <div class="password-overlay">
-            <input type="password" id="passwordInput">
+            <input type="password" id="passwordInput" placeholder="Inserisci qui la password">
             <button onclick="verificaPassword()">Accedi</button>
         </div>
     </div>
