--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             top: 38.7%;
             left: 0;
             width: 100%;
-            transform: translateY(0%);
             height: 100%;
             background-color: rgba(255, 255, 255, 0);
             display: flex;
@@ -42,6 +41,9 @@
 }
 input[type="password"] {
     transform: scale(1.12);
+}
+input[type="password"]::placeholder {
+    font-size: 12px;
 }
     </style>
 </head>
