--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ input[type="password"] {
 }
 input[type="password"]::placeholder {
     font-size: 15px;
+    text-align: center;
 }
     </style>
 </head>
