--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             padding: 10px 20px;
             font-size: 19px;
             margin-top: 15px;
+            background-color: rgba((246,159,62,255)
         }
         .password-overlay {
             position: absolute;
@@ -55,7 +56,7 @@ input[type="password"]::placeholder {
         <img src="Gold and Black Crown Icon Hotel Logo Design (3).png" alt="Descrizione dell'immagine">
         <div class="password-overlay">
             <input type="password" id="passwordInput" placeholder="Inserisci qui la password">
-            <button onclick="verificaPassword()">Accedi</button>
+            <button onclick="verificaPassword()">Click</button>
         </div>
     </div>
 
