--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             padding: 10px 20px;
             font-size: 19px;
             margin-top: 15px;
-            background-color: rgba((246,159,62,255)
+            background-color: rgba(246,159,62,255)
         }
         .password-overlay {
             position: absolute;
