--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ input[type="password"]::placeholder {
     </style>
 </head>
 <body>
-    <h1>Inserisci la password:</h1>
+    <h1>Password:</h1>
     <div class="container">
         <!-- Aggiungi l'immagine qui -->
         <img src="Gold and Black Crown Icon Hotel Logo Design (3).png" alt="Descrizione dell'immagine">
