--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ input[type="password"]::placeholder {
         <!-- Aggiungi l'immagine qui -->
         <img src="Gold and Black Crown Icon Hotel Logo Design (3).png" alt="Descrizione dell'immagine">
         <div class="password-overlay">
-            <input type="password" id="passwordInput" placeholder="Inserisci qui la password">
+            <input type="password" id="passwordInput" placeholder="Password">
             <button onclick="verificaPassword()">Click</button>
         </div>
     </div>
