--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@ input[type="password"] {
     transform: scale(1.12);
 }
 input[type="password"]::placeholder {
-    font-size: 20px;
+    font-size: 19px;
+    font-weight: bold;
     text-align: center;
+
 }
     </style>
 </head>
