--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             position: relative;
             display: inline-block;
         }
-        input[type="password"] {
+        input[type="text"] {
             padding: 10px;
             font-size: 16px;
         }
@@ -43,7 +43,7 @@
 input[type="password"] {
     transform: scale(1.12);
 }
-input[type="password"]::placeholder {
+input[type="text"]::placeholder {
     font-size: 19px;
     font-weight: bold;
     text-align: center;
