--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ function verificaPassword() {
         window.location.href = "https://www.google.it";
       } else {
         // Password errata, gestisci l'errore
-        console.log("Password errata!");
+        alert("Password errata!");
       }
     }
   };
