--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ function verificaPassword() {
         console.log("Password corretta!");
 
         // Reindirizza l'utente a google.it
-        window.location.href = "https://www.google.it";
+        window.location.href = "https://maker.ifttt.com/trigger/Cia/json/with/key/gdxjicY4gERmdikLjitePW_DwM9VyItmIYz9-KJ7jt4";
       } else {
         // Password errata, gestisci l'errore
         alert("Password errata!");
