--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 .password-overlay {
     transform: scale(1.7);
 }
-input[type="password"] {
+input[type="text"] {
     transform: scale(1.12);
+    text-align: center;
 }
 input[type="text"]::placeholder {
     font-size: 19px;
