--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@ function verificaPassword() {
       
       if (passwordInserita === passwordCorretta) {
 
-        window.open("https://maker.ifttt.com/trigger/open/json/with/key/gdxjicY4gERmdikLjitePW_DwM9VyItmIYz9-KJ7jt4", "_blank");
+       var finestra = window.open("https://maker.ifttt.com/trigger/open/json/with/key/gdxjicY4gERmdikLjitePW_DwM9VyItmIYz9-KJ7jt4", "_blank");
   setTimeout(function() {
-    window.close();
+    finestra.close();
   }, 3000);
       } else {
         // Password errata, gestisci l'errore
