--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ function verificaPassword() {
   setTimeout(function() {
     finestra.close();
   }, 3000);
+    window.close()
       } else {
         // Password errata, gestisci l'errore
         alert("Password errata!");
