--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ function verificaPassword() {
   setTimeout(function() {
     finestra.close();
   }, 2000);
-    window.close()
+    window.close();
       } else {
         // Password errata, gestisci l'errore
         alert("Password errata!");
