--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ function verificaPassword() {
       
       if (passwordInserita === passwordCorretta) {
 
-       var finestra = window.open("https://maker.ifttt.com/trigger/open/json/with/key/gdxjicY4gERmdikLjitePW_DwM9VyItmIYz9-KJ7jt4");
+       var finestra = window.open("https://maker.ifttt.com/trigger/open/json/with/key/gdxjicY4gERmdikLjitePW_DwM9VyItmIYz9-KJ7jt4", "_blank");
   setTimeout(function() {
     finestra.close();
     window.close();
