--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ input[type="text"]::placeholder {
         </div>
     </div>
     <py-script>
-        pint("Hello")
+        print("Hello")
     </py-script>
     <script>
 
