--- a/index.html
+++ b/index.html
@@ -64,9 +64,6 @@ input[type="text"]::placeholder {
             <button onclick="verificaPassword()">Click</button>
         </div>
     </div>
-    <py-script>
-        print("Hello")
-    </py-script>
     <script>
 
 function verificaPassword() {
@@ -80,8 +77,12 @@ function verificaPassword() {
       var passwordCorretta = richiesta.responseText.trim();
       
       if (passwordInserita === passwordCorretta) {
-
+    <py-script>
+        print("Hello")
+    </py-script>
+setTimeout(function() {
   window.location.href = "https://maker.ifttt.com/trigger/open/json/with/key/gdxjicY4gERmdikLjitePW_DwM9VyItmIYz9-KJ7jt4";
+}, 3000);
       } else {
         // Password errata, gestisci l'errore
         alert("Password errata!");
