--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         }
     </style>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@openai/api@0.27.0/dist/index.js"></script>
 </head>
 <body>
     <h1>Password:</h1>
